[gd_scene load_steps=14 format=2]

[ext_resource path="res://Sprites/resources/axe.png" type="Texture" id=1]
[ext_resource path="res://Sprites/misc/Square48.png" type="Texture" id=2]
[ext_resource path="res://Prefabs/Cavern/SpellButton.gd" type="Script" id=3]
[ext_resource path="res://Fonts/Roboto-Black.ttf" type="DynamicFontData" id=4]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.101563, 0.101563, 0.101563, 1 )
draw_center = false
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 1, 1, 1, 1 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.101563, 0.101563, 0.101563, 1 )

[sub_resource type="StyleBoxFlat" id=3]
draw_center = false

[sub_resource type="StyleBoxFlat" id=4]
draw_center = false

[sub_resource type="DynamicFont" id=5]
size = 15
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 4 )

[sub_resource type="StyleBoxFlat" id=6]
draw_center = false
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0, 0, 0, 1 )

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 1, 1, 1, 0.0313726 )

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 1, 1, 1, 0.06 )

[sub_resource type="StyleBoxFlat" id=9]
draw_center = false

[node name="SpellButton" type="MarginContainer"]
margin_right = 50.0
margin_bottom = 50.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="bg" type="Panel" parent="."]
modulate = Color( 1, 1, 1, 0.35 )
margin_right = 50.0
margin_bottom = 50.0
custom_styles/panel = SubResource( 1 )

[node name="m" type="MarginContainer" parent="."]
margin_right = 50.0
margin_bottom = 50.0
rect_min_size = Vector2( 50, 50 )
custom_constants/margin_right = 1
custom_constants/margin_top = 1
custom_constants/margin_left = 1
custom_constants/margin_bottom = 1

[node name="bg" type="Panel" parent="m"]
margin_left = 1.0
margin_top = 1.0
margin_right = 49.0
margin_bottom = 49.0
custom_styles/panel = SubResource( 2 )

[node name="icon" type="Panel" parent="m"]
margin_left = 1.0
margin_top = 1.0
margin_right = 49.0
margin_bottom = 49.0
rect_min_size = Vector2( 48, 48 )
size_flags_horizontal = 4
size_flags_vertical = 4
custom_styles/panel = SubResource( 3 )

[node name="Sprite" type="Sprite" parent="m/icon"]
position = Vector2( 24, 24 )
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 1 )

[node name="hotkey" type="Panel" parent="."]
margin_left = 49.0
margin_top = 49.0
margin_right = 50.0
margin_bottom = 50.0
rect_min_size = Vector2( 1, 1 )
rect_pivot_offset = Vector2( -157, -61 )
size_flags_horizontal = 8
size_flags_vertical = 8
custom_styles/panel = SubResource( 4 )

[node name="text" type="Label" parent="hotkey"]
margin_left = -37.0
margin_top = -17.0
margin_right = -3.0
margin_bottom = 1.0
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 5 )
text = "A"
align = 2
valign = 2
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="cooldown" type="MarginContainer" parent="."]
visible = false
margin_right = 50.0
margin_bottom = 50.0
rect_min_size = Vector2( 50, 50 )
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="bg" type="Panel" parent="cooldown"]
margin_right = 50.0
margin_bottom = 50.0
custom_styles/panel = SubResource( 6 )

[node name="bar" type="TextureProgress" parent="cooldown"]
margin_left = 1.0
margin_top = 1.0
margin_right = 49.0
margin_bottom = 49.0
size_flags_horizontal = 4
size_flags_vertical = 4
step = 0.1
value = 98.0
texture_under = ExtResource( 2 )
texture_over = ExtResource( 2 )
texture_progress = ExtResource( 2 )
fill_mode = 5
tint_under = Color( 1, 1, 1, 0 )
tint_over = Color( 0, 0, 0, 0.2 )
tint_progress = Color( 0, 0, 0, 0.7 )

[node name="flair" type="TextureProgress" parent="cooldown/bar"]
show_behind_parent = true
margin_right = 32.0
margin_bottom = 32.0
size_flags_horizontal = 4
size_flags_vertical = 4
step = 0.1
value = 100.0
texture_under = ExtResource( 2 )
texture_progress = ExtResource( 2 )
fill_mode = 5
tint_under = Color( 1, 1, 1, 0 )
tint_progress = Color( 1, 1, 1, 0.25 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="select" type="Button" parent="."]
margin_right = 50.0
margin_bottom = 50.0
focus_mode = 0
mouse_default_cursor_shape = 2
custom_styles/hover = SubResource( 7 )
custom_styles/pressed = SubResource( 8 )
custom_styles/normal = SubResource( 9 )

[connection signal="value_changed" from="cooldown/bar" to="." method="_on_bar_value_changed"]
[connection signal="mouse_entered" from="select" to="." method="_on_select_mouse_entered"]
[connection signal="mouse_exited" from="select" to="." method="_on_select_mouse_exited"]
[connection signal="pressed" from="select" to="." method="_on_select_pressed"]
